# GFS_basic

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
src/Fuzzy_Logic_Toolbox/: FuzzyToolbox.py  Initialize_Trees.py  Simple_FISs.py  ViewingTools.py
src/Genetic_Algorithm_Toolbox/: GeneticAlgorithm.py  RunGA.py
src/gfs_basic/Fuzzy_Logic_Toolbox/: FuzzyToolbox.py  Initialize_Trees.py  Simple_FISs.py  ViewingTools.py
src/gfs_basic/Genetic_Algorithm_Toolbox/: GeneticAlgorithm.py  RunGA.py
