# NOTICE: This file is subject to the license agreement defined in file 'LICENSE', which is part of
# this source code package.

[metadata]
name = gfs_basic
version = 1.0.1
url = https://github.com/pickerln/GFS_basic
author = Lynn Pickering
author_email = pickerln@mail.uc.edu
maintainer = Lynn Pickering
maintainer_email = pickerln@mail.uc.edu
description = Basic genetic fuzzy systems code
long_description = file: README.md
keywords = fuzzy logic, artificial intelligence, genetic algorihtm
license = MIT License
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Operating System :: OS Independent

[options]
zip_safe = True
package_dir=
    =src
packages = find:
python_requires = >=3.6

[options.packages.find]
where=src
